# sentinel

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: eval.yml
agent/: agent.py  tools.py
api/: main.py
deploy/: berny-tunnel.sh
deploy/cloudflared/: config.yml
docs/: blog-draft.md
eval/: faithfulness.py  golden_candidates.jsonl  golden_set.jsonl  make_golden.py  retrieval_eval.py  run_eval.py  validate_judge.py
eval/reports/: cost_report.json
generation/: answer.py
guardrails/: guard.py
ingestion/: embed_load.py  fetch.py
observability/: trace.py
ops/: cost_report.py
retrieval/: hybrid.py  search.py
scripts/: push_github.sh
ui/: index.html
